--- a/dropdown/tsconfig.json
+++ b/dropdown/tsconfig.json
@@ -15,12 +15,15 @@
     "isolatedModules": true,
     "noEmit": true,
     "jsx": "react-jsx",
-    "baseUrl": ".",
+    "baseUrl": "./src",
     "paths": {
-      "@components/*": ["./src/components/*"],
-      "@utils/*": ["./src/utils/*"],
-      "@api/*": ["./src/api/*"],
-      "@consts/*": ["./src/consts/*"]
+      "@/components/*": ["components/*"],
+      "@/utils/*": ["utils/*"],
+      "@/consts/*": ["consts/*"]
+      // "@components/*": ["src/components/*"],
+      // "@utils/*": ["src/utils/*"],
+      // "@api/*": ["src/api/*"],
+      // "@consts/*": ["src/consts/*"]
     }
   },
   "include": ["src", "public/sw.js"],
